[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "cryptography>=46.0.6",
    "ipython==9.10.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.27",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.21",
    "langgraph-prebuilt>=1.0.9",
    "langgraph-sdk>=0.3.13",
    "langsmith>=0.7.26",
    "notebook>=7.5.5",
    "pygments>=2.20.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
